Raster lines working
Wireframe is displayed correctly. Very bad performance, as expected.

--- a/Close2GL/Close2GL.csproj
+++ b/Close2GL/Close2GL.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="Close2GL.cs" />
+    <Compile Include="Edge.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
