--- a/Close2GL/Close2GL.csproj
+++ b/Close2GL/Close2GL.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Close2GL.cs" />
     <Compile Include="Edge.cs" />
+    <Compile Include="Fragment.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
